# Rust-web-template

./: .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs
migrations/2017-12-08-212507_oauth_setup/: down.sql  up.sql
src/: compress.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/v1/: mod.rs  oauth.rs
src/db/: mod.rs  oauth.rs
src/db/cache/: mod.rs  oauth.rs
src/db/models/: mod.rs  oauth.rs
static/css/: homepage.scss
static/css/_common/: settings.scss
static/fav/: browserconfig.xml  manifest.json
templates/: homepage.hbs
templates/_common/: footer.hbs  header.hbs
